[gd_scene load_steps=4 format=2]

[ext_resource path="res://Meteor03.gd" type="Script" id=1]
[ext_resource path="res://res/sprite/meteorito2.png" type="Texture" id=2]
[ext_resource path="res://res/snd/meteromove.wav" type="AudioStream" id=3]

[node name="Meteor03" type="Node2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="m3_1" type="Sprite" parent="."]
visible = false
position = Vector2( 23.75, 58.75 )
texture = ExtResource( 2 )

[node name="m3_2" type="Sprite" parent="."]
visible = false
position = Vector2( 115.5, 41.75 )
texture = ExtResource( 2 )

[node name="m3_3" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 31.5 )
texture = ExtResource( 2 )

[node name="m3_4" type="Sprite" parent="."]
visible = false
position = Vector2( 368.5, 23.75 )
texture = ExtResource( 2 )

[node name="m3_5" type="Sprite" parent="."]
visible = false
position = Vector2( 487.75, 18.75 )
texture = ExtResource( 2 )

[node name="m3_6" type="Sprite" parent="."]
visible = false
position = Vector2( 614.5, 21.25 )
texture = ExtResource( 2 )

[node name="mmove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
